DEADLINE!
## 수요일까지 Train 시키고 Test 돌리기
    ## 정확도 출력, Train set 모두 학습 후 DB3로 테스트 진행.

Apr. 26. 2022 (B. InSung)
- Tuesday Session Start!
- Reconstruce 과정 중에 오류 발생
    - RuntimeError: The size of tensor a (14400) must match the size of tensor b (1152000) at non-singleton dimension 0
    - Dimension 이 맞지 않아 생기는 오류로 앞에서 연산된 testing_tensor의 크기가 3D로 되어 있어 이를 flatten으로 변환 중 오류 발생.
- 22:32:10 결과
```
mbda6'()::operator()() const::'lambda'(at::vec::(anonymous namespace)::Vectorized<float>)&&, long long)::'lambda'(char**, long long const*, long long) const&)::'lambda'(char**, long long const*, long long, long long)>:
->  0x177f425f0 <+912>: ld1.4s { v0, v1 }, [x9], #32
    0x177f425f4 <+916>: ld1.4s { v2, v3 }, [x9]
    0x177f425f8 <+920>: mov    x23, x11
    0x177f425fc <+924>: add    x12, x10, #0x40
Target 0: (python) stopped.
```
    - lldb를 통해 디버깅한 결과, 변수 값이 너무 커서 Memory를 다 할당시키지 못함. 코드 상의 알고리즘 오류 발생.

Apr. 25. 2022 (B. InSung)
- Monday Session Start!
- BBRBM.py : w_t + self.b 에서 dimension 불일치 오류 발생
- BBRBM p_v_given_h 함수 오류 발생
    - RuntimeError: mat1 and mat2 shapes cannot be multiplied (80x180 and 1x180)
    - w_t + self.b 의 크기를 변경 예정. 1x180 -> 180x1
- 기존 Tensor의 사이즈와 맞지 않음. 즉, Overflow와 같은 현상이 발생하게 되어서 이를 변경하는 쪽으로 가야함.
- 기존 코드는 Epoch 0 에만 적합. 0 이후의 숫자 (1, 2, 3 ...) 에는 아직 고려 되지 않음. 아래는 해당 에러 본문.
    - RuntimeError: shape '[14400]' is invalid for input of size 1152000

Apr. 24. 2022 (B. InSung)
- stats_pos, stats_neg 문제 해결
    - 각각의 matmul을 위한 사이즈와 src (scatter 사이즈로 맞춰줌.) 이로 인해 문제해결
- BBRBM p_h_given_v 함수 내에서 오류 발생
    - sigmoid 함수에 parameter로 넣으면서 맞지 않은 데이터 형식으로 오류남.
        - RuntimeError: shape '[14400]' is invalid for input of size 80
    - v_i = v.clone().view(180 * 80)를 하면 180의 input은 존재, 허나 14400개를 채울게 없음
    - 이로 인해 에러 발생. 고쳐야하는데... 멘탐 좀 나감.

Apr. 22. 2022 (B. InSung)
- Torch 에서 같은 문제로 충돌하게 됨. 모종의 이유로 Tensorflow로 다시 시작해봄...
    - 사실상 처음부터 다시한 느낌이다만, 그래도 Pre-processing을 객체로 끌어와서 다행
- Tensorflow 내에서 어떻게 입력을 해줘야할지에서 논의중
    - 강아지 궁뎅이 그리워요

Apr. 21. 2022 (B. InSung)